# rekt

./: CMakeLists.txt  LICENSE.md  README.md  sample-data.json
.github/workflows/: cmake.yml
docs/doxygen/: CMakeLists.txt  mainpage.md
include/rekt/: io.hpp  rectangle.hpp  rekt.hpp  util.hpp
src/: CMakeLists.txt  io.cpp  main.cpp  rectangle.cpp  rekt.cpp  rektapp.cpp  rektapp.hpp  util.cpp
test/: CMakeLists.txt  testio.cpp  testrectangle.cpp  testrekt.cpp
